Fixed -- EA Event calendar not fully visible in mobile

--- a/src/css/view/event-calendar.scss
+++ b/src/css/view/event-calendar.scss
@@ -318,6 +318,13 @@ span.fc-day-number {
 					}
 				}
 			}
+
+			td.fc-widget-content {
+				> div[style*="scroll"] {
+					height: auto !important;
+					overflow: hidden !important;
+				}
+			}
 		}
 	}
 }
